dataset/local/df_check_npm_strict_ssl/resource.yaml
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: good-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: ENV
        Env:
          - Key: NPM_CONFIG_STRICT_SSL
            Value: "true"
---
apiVersion: dockerfile.kyverno.io/v1
kind: Dockerfile
metadata:
  name: bad-dockerfile
Stages:
  - BaseName: ubuntu:22.04
    Commands:
      - Name: ENV
        Env:
          - Key: NPM_CONFIG_STRICT_SSL
            Value: "false"
