dataset/local/df_check_npm_strict_ssl/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-npm-config-strict-ssl
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: check-npm-config-strict-ssl
    kind: Dockerfile
    resources:
      - good-dockerfile
    result: pass
  - policy: check-npm-config-strict-ssl
    kind: Dockerfile
    resources:
      - bad-dockerfile
    result: fail
